--- a/style.css
+++ b/style.css
@@ -65,15 +65,18 @@ header{
     padding-bottom: 50px;
     background-color: rgb(255, 167, 123);
 }
-.dough.container{
+.dough-container{
     display: flex;
-    gap: 50px;
     align-items: center;
+    gap: 50px;
 }
 .dough-image{
     width: 550px;
+    padding: 50px;
+    flex-wrap: wrap;
 }
 .dough-title{
+    font-size: 40px;
     color: rgb(113, 27, 12);
 }
 .dough-list{
